fix: changed some timing of transitions and some names

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <header>
-        <h1>Rede social totalmente real</h1>
+        <h1>Rede Social</h1>
+        <h2>CRUD</h2>
     </header>
     <div class="container">
         <form class="left-container" id="form">
